<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_relativelayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backgroud_home"
    android:gravity="center_vertical"
     >

    <!-- float view -->

    <ImageView
        android:id="@+id/animation_imageview"
        android:layout_width="20dip"
        android:layout_height="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/selected_application_background100"
        android:visibility="invisible" />

    <!-- top 1 -->

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/top_left"
            android:layout_width="200dip"
            android:layout_height="60dip"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dip"
            android:layout_marginTop="15dip"
            android:text="@string/gift_activity_name"
            android:textColor="@color/black"
            android:textSize="20dip" />
 
        <TextView
            android:id="@+id/top_search"
            android:layout_width="130dip"
            android:layout_height="60dip"
            android:drawableLeft="@drawable/app_search"
            android:drawablePadding="15dip"
            android:text="@string/app_search"
            android:focusable="true"
            android:textColor="@color/black"
            android:textSize="19dip"
            android:padding="10dip"
            android:paddingLeft="20dip"
            android:gravity="center_vertical"
            android:layout_marginLeft="920dip" />
        
        <ImageView
            android:layout_width="1dip"
            android:layout_height="30dip"
            android:layout_marginLeft="1070dip"
            android:layout_marginTop="15dip"
            android:background="@color/black" />

        <TextView
            android:id="@+id/top_down_record"
            android:layout_width="170dip"
            android:layout_height="60dip"
            android:focusable="true"
            android:textSize="19dip"
            android:drawableLeft="@drawable/button_download"
            android:drawablePadding="15dip"
            android:text="@string/downloadmrg_button_txt"
            android:textColor="@color/black"
            android:padding="10dip"
            android:paddingLeft="20dip"
            android:gravity="center_vertical"
            android:layout_marginRight="30dip"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <!-- top 2 --> 
	<RelativeLayout 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_below="@id/top"
        android:layout_marginTop="30dip"
	    android:layout_alignParentBottom="true" >
	    <LinearLayout 
		    android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="30dip"
	        android:layout_marginRight="30dip"
		    android:layout_alignParentLeft="true"
		    android:orientation="vertical" >
		    <ImageView
                android:id="@+id/gift_icon"
	            android:layout_width="180dip"
	            android:layout_height="180dip"
                android:layout_gravity="center_vertical"
	            android:layout_marginLeft="30dip"
	            android:layout_marginTop="15dip" /> 
		     <TextView
		        android:id="@+id/pack_price"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/price_old"
	            android:layout_marginLeft="40dip"
	            android:textColor="@color/black"
            	android:textSize="24dip"  />
		     <TextView
		        android:id="@+id/pack_promotion"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/pack_price"
	            android:layout_marginLeft="40dip" 
                android:textStyle="bold"
	            android:textColor="@color/red"
            	android:textSize="28dip" />
		      <!-- 购买 -->
		     <Button
		        android:id="@+id/pack_order"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:paddingRight="20dip"
                android:paddingLeft="20dip"
                android:focusable="true"
	            android:layout_width="202dip"
                android:layout_height="63dip"
                android:layout_marginRight="5dip"
	            android:layout_marginLeft="30dip" 
	            android:textSize="30dip"
                android:textColor="@color/white"
                android:textStyle="bold"
	            android:text="@string/buy_now"
	            android:background="@drawable/btn_down_bg" 
	            />
			 <TextView
			    android:id="@+id/pack_desc"
		        android:layout_width="200dip"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="40dip" 
		        android:layout_marginTop="20dip"
		        android:lines="6"
                android:ellipsize = "end"
		        android:text="@string/pack_desc"
		        android:textColor="@color/black"
	            android:textSize="24dip"  />
		</LinearLayout>
	    <RelativeLayout 
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="330dip"
	        android:layout_marginRight="30dip"
		    android:layout_alignParentRight="true"
		    android:layout_marginTop="15dip" >
		     <TextView
		        android:id="@+id/pack_name"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="30dip"  
	            android:text="@string/pack_temp_name"
	            android:gravity="center_horizontal" 
	            android:layout_alignParentTop="true"
	            android:textColor="@color/red"
	            android:textStyle="bold"
            	android:textSize="40dip" 
            	/>
		     <ListView
		        android:id="@+id/app_store_listview"
		        android:layout_width="fill_parent"
		        android:layout_height="390dip"
                android:listSelector="#00000000"
                android:divider="#00000000"
		        android:layout_marginLeft="75dip"
		        android:layout_marginRight="60dip"
		        android:layout_marginTop="10dip" 
		        android:layout_below="@id/pack_name"/>
		
		    <ImageView
		        android:id="@+id/app_store_left_image"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="20dip"
		        android:layout_marginTop="260dip"
		        android:background="@drawable/arrowleft"
		        android:contentDescription="@string/str_null"
                android:visibility="gone" />
		    <ImageView
		        android:id="@+id/app_store_right_image"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="260dip"
		        android:background="@drawable/arrowright"
		        android:contentDescription="@string/str_null"
                android:visibility="gone" /> 
		    <TextView
		        android:id="@+id/pack_page"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"  
	            android:text="@string/pack_total_price"
	            android:gravity="center_horizontal" 
	            android:layout_below="@id/app_store_listview" 
	            android:textColor="@color/black"
            	android:textSize="22dip"
            	android:layout_marginBottom="10dip" />  
			<ImageView
                android:id="@+id/label_image"
                android:layout_width="700dip"
                android:layout_height="1dip"
                android:layout_below="@id/pack_page"
                android:layout_marginLeft="80dip"
                android:layout_marginTop="15dip"
                android:background="@color/black"
                android:contentDescription="@string/str_null"
                />
		    <TextView
		        android:id="@+id/pack_total_price"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="80dip"
	            android:text="@string/pack_total_price"
	            android:gravity="right" 
	            android:layout_below="@id/label_image"
	            android:layout_alignParentBottom="true"
	            android:textColor="@color/black"
            	android:textSize="26dip"
            	android:layout_marginBottom="30dip"  />
		</RelativeLayout>
	</RelativeLayout>
   

</RelativeLayout>
