<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="440dip"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:gravity="center" >
	<LinearLayout 
	    android:layout_width="fill_parent"
    	android:layout_height="180dip"
    	android:layout_marginTop="-75dip"
    	android:background="@drawable/app_search_store_background"
    	android:orientation="vertical"
	    >
	    <LinearLayout 
	        android:id="@+id/app_search_edittext_layout"
	        android:layout_width="fill_parent"
    		android:layout_height="180dip"
    		android:gravity="center"
    		android:orientation="horizontal"
    	>
	        <EditText
			    android:layout_width="400dip"
	            android:layout_height="60dip"
	            android:background="@drawable/search_edittext"
	            android:textSize="22dip"
	            android:textColor="@color/black"
	            android:singleLine="true"
	            android:maxLength="20"
	            android:padding="10dip"
	            android:focusable="true"
	            android:layout_marginLeft="50dip"
	            android:id="@+id/search_edittext"/>
			
	        <ImageView
	            android:id="@+id/search_button_search"
	            android:layout_width="80dip"
	            android:layout_height="80dip"
	            android:layout_marginLeft="20dip"
	            android:padding="10dip"
	            android:focusable="true"
                android:src="@drawable/btn_search"
	            />
	
	        <ImageView
	            android:id="@+id/search_button_voice"
	            android:layout_marginLeft="20dip"
	            android:layout_width="80dip"
	            android:visibility="gone"
	            android:layout_height="70dip"
	             />
	        
	    </LinearLayout>
	    <TextView
     		android:id="@+id/home_item_name"
            android:layout_width="fill_parent"
            android:layout_height="30dip"
            android:layout_marginLeft="14dip"
            android:layout_marginTop="-45dip"
            android:text="@string/fast_search"
            android:paddingLeft="12dip"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
	        />
	    
	</LinearLayout>
	
	<LinearLayout  
	    android:id="@+id/app_search_layout_bottom"
    	android:layout_width="fill_parent"
    	android:layout_height="180dip"
    	android:orientation="horizontal"
    	android:gravity="center_horizontal"
    	>
	    <LinearLayout 
	        android:layout_width="500dip"
	        android:layout_weight="1"
	        android:background="@drawable/search_app_back"
	        android:orientation="vertical"
    		android:layout_height="180dip">
	    <ImageView
	        android:nextFocusUp="@+id/search_edittext"
            android:id="@+id/search_all_app"
            android:src="@drawable/app_all"
            android:layout_width="fill_parent"
            android:layout_height="180dip"
            android:focusable="true"
            android:padding="14dip"
            android:scaleType="fitXY"
             />
	    <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dip"
            android:background="@color/black"
            android:paddingLeft="14dip"
            android:layout_marginTop="-45dip"
            android:alpha="0.7"
            android:textSize="18dp"
            android:layout_marginLeft="12dip"
	        android:layout_marginRight="13dip"
            android:text="@string/show_all_app"
            android:textColor="@color/white"
            android:gravity="center_vertical"
	        />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="500dip"
	        android:background="@drawable/search_app_back"
	        android:layout_weight="1"
	        android:orientation="vertical"
    		android:layout_height="180dip">
		    <ImageView
		        android:nextFocusUp="@+id/search_edittext"
	            android:id="@+id/search_all_queen"
	            android:layout_width="fill_parent"
	            android:layout_height="180dip"
	            android:padding="14dip"
                android:scaleType="fitXY"
	            android:src="@drawable/app_ranking"
	            android:focusable="true"
	             />
		    <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="30dip"
	            android:background="@color/black"
	            android:paddingLeft="14dip"
	            android:layout_marginLeft="12dip"
	            android:layout_marginRight="13dip"
                android:layout_marginTop="-45dip"
	            android:alpha="0.7"
	            android:textSize="18dp"
	            android:text="@string/app_top"
	            android:textColor="@color/white"
	            android:gravity="center_vertical"
	        />
	    </LinearLayout>
	</LinearLayout >

</LinearLayout>